ex2/CompiledFiles/SampleParser.py
# Generated from Sample.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SampleParser ( Parser ):

    grammarFileName = "Sample.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'If'", "'then'", "'the'", "'light'", 
                     "'temperature'", "'music'", "'in'", "'brightness'", 
                     "'by'", "'to'", "'time'", "'is'", "':'", "'before'", 
                     "'after'", "'at'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "VERB", "PREPOSITION", "WORD", "INT", 
                      "WS" ]

    RULE_command = 0
    RULE_simpleCommand = 1
    RULE_conditionalCommand = 2
    RULE_action = 3
    RULE_deviceObject = 4
    RULE_lightDevice = 5
    RULE_temperatureDevice = 6
    RULE_musicDevice = 7
    RULE_brightnessDevice = 8
    RULE_modifier = 9
    RULE_condition = 10
    RULE_timeCondition = 11
    RULE_time = 12
    RULE_comparator = 13

    ruleNames =  [ "command", "simpleCommand", "conditionalCommand", "action", 
                   "deviceObject", "lightDevice", "temperatureDevice", "musicDevice", 
                   "brightnessDevice", "modifier", "condition", "timeCondition", 
                   "time", "comparator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    VERB=17
    PREPOSITION=18
    WORD=19
    INT=20
    WS=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleCommand(self):
            return self.getTypedRuleContext(SampleParser.SimpleCommandContext,0)


        def conditionalCommand(self):
            return self.getTypedRuleContext(SampleParser.ConditionalCommandContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_command




    def command(self):

        localctx = SampleParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_command)
        try:
            self.state = 30
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SampleParser.VERB]:
                self.enterOuterAlt(localctx, 1)
                self.state = 28
                self.simpleCommand()
                pass
            elif token in [SampleParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 29
                self.conditionalCommand()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def action(self):
            return self.getTypedRuleContext(SampleParser.ActionContext,0)


        def deviceObject(self):
            return self.getTypedRuleContext(SampleParser.DeviceObjectContext,0)


        def modifier(self):
            return self.getTypedRuleContext(SampleParser.ModifierContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_simpleCommand




    def simpleCommand(self):

        localctx = SampleParser.SimpleCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_simpleCommand)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.action()
            self.state = 33
            self.deviceObject()
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SampleParser.T__8 or _la==SampleParser.T__9:
                self.state = 34
                self.modifier()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(SampleParser.ConditionContext,0)


        def simpleCommand(self):
            return self.getTypedRuleContext(SampleParser.SimpleCommandContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_conditionalCommand




    def conditionalCommand(self):

        localctx = SampleParser.ConditionalCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_conditionalCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(SampleParser.T__0)
            self.state = 38
            self.condition()
            self.state = 39
            self.match(SampleParser.T__1)
            self.state = 40
            self.simpleCommand()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERB(self):
            return self.getToken(SampleParser.VERB, 0)

        def PREPOSITION(self):
            return self.getToken(SampleParser.PREPOSITION, 0)

        def getRuleIndex(self):
            return SampleParser.RULE_action




    def action(self):

        localctx = SampleParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_action)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(SampleParser.VERB)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SampleParser.PREPOSITION:
                self.state = 43
                self.match(SampleParser.PREPOSITION)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeviceObjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lightDevice(self):
            return self.getTypedRuleContext(SampleParser.LightDeviceContext,0)


        def temperatureDevice(self):
            return self.getTypedRuleContext(SampleParser.TemperatureDeviceContext,0)


        def musicDevice(self):
            return self.getTypedRuleContext(SampleParser.MusicDeviceContext,0)


        def brightnessDevice(self):
            return self.getTypedRuleContext(SampleParser.BrightnessDeviceContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_deviceObject




    def deviceObject(self):

        localctx = SampleParser.DeviceObjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_deviceObject)
        try:
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.lightDevice()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.temperatureDevice()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.musicDevice()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.brightnessDevice()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LightDeviceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(SampleParser.WORD)
            else:
                return self.getToken(SampleParser.WORD, i)

        def getRuleIndex(self):
            return SampleParser.RULE_lightDevice




    def lightDevice(self):

        localctx = SampleParser.LightDeviceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_lightDevice)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(SampleParser.T__2)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SampleParser.WORD:
                self.state = 53
                self.match(SampleParser.WORD)
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 59
            self.match(SampleParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TemperatureDeviceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(SampleParser.WORD)
            else:
                return self.getToken(SampleParser.WORD, i)

        def getRuleIndex(self):
            return SampleParser.RULE_temperatureDevice




    def temperatureDevice(self):

        localctx = SampleParser.TemperatureDeviceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_temperatureDevice)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(SampleParser.T__2)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SampleParser.WORD:
                self.state = 62
                self.match(SampleParser.WORD)
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(SampleParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MusicDeviceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(SampleParser.WORD)
            else:
                return self.getToken(SampleParser.WORD, i)

        def getRuleIndex(self):
            return SampleParser.RULE_musicDevice




    def musicDevice(self):

        localctx = SampleParser.MusicDeviceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_musicDevice)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(SampleParser.T__5)
            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 71
                self.match(SampleParser.T__6)
                pass

            elif la_ == 2:
                self.state = 72
                self.match(SampleParser.T__6)
                self.state = 73
                self.match(SampleParser.T__2)
                pass


            self.state = 77 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 76
                self.match(SampleParser.WORD)
                self.state = 79 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SampleParser.WORD):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BrightnessDeviceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SampleParser.RULE_brightnessDevice




    def brightnessDevice(self):

        localctx = SampleParser.BrightnessDeviceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_brightnessDevice)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(SampleParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(SampleParser.INT, 0)

        def getRuleIndex(self):
            return SampleParser.RULE_modifier




    def modifier(self):

        localctx = SampleParser.ModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_modifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            _la = self._input.LA(1)
            if not(_la==SampleParser.T__8 or _la==SampleParser.T__9):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 84
            self.match(SampleParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def timeCondition(self):
            return self.getTypedRuleContext(SampleParser.TimeConditionContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_condition




    def condition(self):

        localctx = SampleParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.timeCondition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TimeConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparator(self):
            return self.getTypedRuleContext(SampleParser.ComparatorContext,0)


        def time(self):
            return self.getTypedRuleContext(SampleParser.TimeContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_timeCondition




    def timeCondition(self):

        localctx = SampleParser.TimeConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_timeCondition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(SampleParser.T__2)
            self.state = 89
            self.match(SampleParser.T__10)
            self.state = 90
            self.match(SampleParser.T__11)
            self.state = 91
            self.comparator()
            self.state = 92
            self.time()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(SampleParser.INT)
            else:
                return self.getToken(SampleParser.INT, i)

        def getRuleIndex(self):
            return SampleParser.RULE_time




    def time(self):

        localctx = SampleParser.TimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_time)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(SampleParser.INT)
            self.state = 95
            self.match(SampleParser.T__12)
            self.state = 96
            self.match(SampleParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SampleParser.RULE_comparator




    def comparator(self):

        localctx = SampleParser.ComparatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_comparator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SampleParser.T__13) | (1 << SampleParser.T__14) | (1 << SampleParser.T__15))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





